# tensorflow-predictor-cpp

./: .gitignore  CMakeLists.txt  README.md  data.py  dict.py  model.py  train.py
demo/: freeze_graph.sh  libfm.data  simpile_model.py  test.py  train.sh  trans_data_to_tfrecord.sh
demo/deep_model/: freeze_graph.sh  predict.sh  train.sh  trans_data_to_tfrecord.sh
demo/deep_model/data/: libfm.data
demo/simple_model/: predict.sh  train.sh
include/: util.h
proto/: dict.pb.cc  dict.pb.h  dict.proto
python/: data.py  deep_model.py  dict.py  dict_pb2.py  freeze.py  freeze_graph.py  model.py  predict_model.py  simple_model.py  train.py
src/: CMakeLists.txt  deep_model.cc  fnn.cc  simple_model.cc  test.cc
test/: generate_dict.sh  train.sh  trans_data_to_tfrecord.sh
